fix: Solucionando overflow na pagina

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,6 +7,9 @@
     font-family: 'Bai Jamjuree', sans-serif;
 }
 
+.container-fluid{
+    overflow: hidden;
+}
 
 
 h2 {
@@ -255,8 +258,8 @@ h2 {
 
 .wantSection{
     padding: 0;
-    margin-left: -15;
-    margin-right: -15;
+    margin-left: -15px;
+    margin-right: -15px;
     height: 50vh;
 }
 
